[package]
name = "rumia"
version = "0.1.0"
edition = "2024"
authors = ["peter2500zz"]
homepage = "https://rumia.docs.mygo.plus/"
repository = "https://github.com/peter2500zz/rumia"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3

[dependencies]
anyhow = "1.0.100"
fern = { version = "0.7.1", features = ["colored"] }
inventory = "0.3.21"
minhook = "0.9.0"
mlua = { version = "0.11.5", features = ["lua54", "vendored", "serialize", "macros", "mlua_derive"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.43"
windows = { version = "0.62.2", features = ["Win32_System_Console"] }
windows_wrapper = { git = "https://github.com/peter2500zz/windows_wrapper" }
config = { path = "config" }

[workspace]
members = [
    "config",
    "loader",
]

[workspace.dependencies]
anyhow = "1.0.100"
config = { path = "config" }
serde = { version = "1.0.228", features = ["derive"] }
windows_wrapper = { git = "https://github.com/peter2500zz/windows_wrapper" }
